--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+attrs==20.3.0
+cryptography==3.4.6
+iniconfig==1.1.1
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
 pycryptodome==3.10.1
+pyparsing==2.4.7
 pytest==6.2.2
+toml==0.10.2
