--- a/new_encryptoenv/pyproject.toml
+++ b/new_encryptoenv/pyproject.toml
@@ -10,6 +10,9 @@ click = "^8.0.4"
 cryptography = "^36.0.1"
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.17.0"
+black = "^22.1.0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
